--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
+
 <!DOCTYPE html>
 <html>
 <head>
+  <!-- Written by Zac Scott of VUW , feel free to adapt for personal use -->
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <title>scottzach1 | SWEN 200</title>
   <style>
@@ -81,7 +83,7 @@
         </tr>
         <tr>
           <td><a href="http://photos.google.com">Photos<a/></td>
-            <td></td>
+            <td><a href="https://www.victoria.ac.nz/students/tools/student-records">Records</a></td>
             <td><a href="https://apps.ecs.vuw.ac.nz/submit/COMP261">Submit</a></td>
             <td><a href="https://apps.ecs.vuw.ac.nz/submit/NWEN241">Submit</a></td>
             <td><a href="https://apps.ecs.vuw.ac.nz/submit/SWEN221">Submit</a></td>
